I fixed the issue with the layout of product photos and spacing in CSS, and I added the hair products,dexcription,hair images and CSS

--- a/home.css
+++ b/home.css
@@ -404,10 +404,10 @@ hr{
 }
 .bodyfoto img{
     width:95%;
-    height: 600px;
-    margin-bottom: 300px;
+    height: 700px;
+    margin-bottom: 200px;
     margin-left: 40px;
-    margin-top: 200px;
+    margin-top: 100px;
     margin-right: 20px;
 }
 
@@ -440,6 +440,8 @@ hr{
     margin: 10px;
     padding: 20px;
     margin-right: 5px;
+    margin-bottom: 50px;
+    margin-top: -50px;
     
 
 }
@@ -473,15 +475,17 @@ hr{
     justify-content: center;
     padding: 20px;
     margin: 10px;
-    width: 350px;
+    width: 300px;
     height: 350px;
+    margin-top: -100px;
+    margin-bottom: 90px;
 }
 .bproduct h1{
     font-size: 15px;
     text-align: center;
 }
 .bproduct img{
-    width: 250px;
+    width: 300px;
     height: 250px;
     align-items: center;
 
@@ -506,11 +510,65 @@ hr{
    justify-content: space-evenly;
 }
 .bodyimages img{
-    width: 40%;
+    width: 43.2%;
     height: 600px;
 }
 .hair h1{
     text-align: center;
     font-size: 30px;
     padding: 30px;
-}
+    }
+    .produktet{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding: 20px;
+    }
+    .produkt{
+        display: flex;
+        flex-wrap: wrap;
+        width: 400px;
+        height:450px ;
+        padding: 20px;
+        margin: 10px;
+        justify-content: center;
+        margin-bottom: 30px;
+    
+        
+    }
+    .produkt h1{
+        font-size: 15px;
+        text-align: center;
+    }
+    .produktet .produkt img{
+        width: 350px;
+        height: 350px;
+        align-items: center;
+    
+    
+    }
+     .produkt p{
+        text-align: center;
+        font-weight: bold;
+        color: #d94496;
+        display: block;
+        margin-bottom: 10px;
+        margin-left: 10px;
+    }
+    .produktet .produkt label{
+        font-size: 12px;
+        color: rgb(178, 174, 174);
+    }
+    .HairFoto img{
+        box-sizing: border-box;
+        width: 100%;
+        margin-top: 60px;
+        height: 400px;
+    }
+
+    .saleOffers h1{
+        font-size: 30px;
+        text-align: center;
+        padding: 30px;
+
+    }
